--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             AWS.config.region = 'us-east-1'
             var authData = {
                 ClientId: "6nrumiaqv00kiou23etq6mqur0", // Input: Your Cognito client id here
-                AppWebDomain: "https://userpool-test-0823492212.auth.us-east-1.amazoncognito.com",	// Input: Your Congnito domain name here
+                AppWebDomain: "userpool-test-0823492212.auth.us-east-1.amazoncognito.com",	// Input: Your Congnito domain name here
                 TokenScopesArray: ["email",
                     "openid"
                 ], // e.g.['phone', 'email', 'profile','openid', 'aws.cognito.signin.user.admin'],
