update index.html for test

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         function initCognitoSDK() {
             AWS.config.region = 'us-east-1'
             var authData = {
-                ClientId: "1m8vpulamnjgcrl4nfof0g02ab", // Input: Your Cognito client id here
+                ClientId: "7hgla83ano8uv0aqtl0pkomkic", // Input: Your Cognito client id here
                 AppWebDomain: "userpool-test-0823492212.auth.us-east-1.amazoncognito.com",	// Input: Your Congnito domain name here
                 TokenScopesArray: ["email",
                     "openid"
                 ], // e.g.['phone', 'email', 'profile','openid', 'aws.cognito.signin.user.admin'],
                 RedirectUriSignIn: "https://benpoon-microchip.github.io/mchpiotcontrol2",	// Input: Your webpage url
                 RedirectUriSignOut: "https://benpoon-microchip.github.io/mchpiotcontrol2",	// Input: Your webpage url
-                UserPoolId: "us-east-1_fzMw1LyUK", // Input: Your Cognito user pool id here
+                UserPoolId: "us-east-1_5N8clnCS7", // Input: Your Cognito user pool id here
             };
             var login = {};
             var auth = new AmazonCognitoIdentity.CognitoAuth(authData);
@@ -101,7 +101,7 @@
                         'UserPoolId'];
                     login[loginKey] = result.getIdToken().getJwtToken();
                     AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-                        IdentityPoolId: "us-east-1:cb39b65b-7aa0-4f85-90ab-7b63490af7b6", // Input: Cognito identity pool ID
+                        IdentityPoolId: "us-east-1:c8f5eb4a-33e6-42ec-aa2b-60ee61ac1676", // Input: Cognito identity pool ID
                         Logins: login
                     });
                     AWS.config.credentials.refresh((error) => {
